--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/components/calendar.js": "/js/components/calendar.js"
+    "/js/page/articleList.js": "/js/page/articleList.js"
 }
