--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "7.3.21",
+        "php": "7.3.11",
         "barryvdh/laravel-debugbar": "^3.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "goodby/csv": "^1.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
