--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
+        "eslint": "^7.16.0",
+        "eslint-plugin-vue": "^7.3.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -20,6 +22,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "vee-validate": "^3.4.0",
         "vue": "^2.5.17",
         "vue-router": "^3.3.4",
         "vue-template-compiler": "^2.6.11"
