--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "7.3.11",
+        "php": "^7.3.11",
         "barryvdh/laravel-debugbar": "^3.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
