--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,9 +7,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php-version: ['7.3']
+
     services:
       mysql:
-
         image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: password
