--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -56,10 +56,16 @@ jobs:
       
     - name: composer dump autoload
       run: composer dump-autoload
+
+    - name: copy .env
+      run: cp .env.example .env
+
     - name: generate key
-      run: php artisan key:generate --env=testing
+      run: php artisan key:generate
+
     - name: migrate
       run: php artisan migrate
+
     - name: unit test
       run: ./vendor/bin/phpunit
 
