--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "dayjs": "^1.8.22"
+        "dayjs": "^1.8.22",
+        "vuex": "^3.6.0",
+        "vuex-persistedstate": "^4.0.0-beta.3"
     }
 }
